--- a/reference/1.0.0/CardPointeIntegratedTerminalAPI/CardPointeIntegratedTerminalAPI.yaml
+++ b/reference/1.0.0/CardPointeIntegratedTerminalAPI/CardPointeIntegratedTerminalAPI.yaml
@@ -635,7 +635,7 @@ paths:
         content:
           application/json:
             schema: 
-              $ref: '#/components/schemas/readCardRequest'
+              $ref: '#/components/schemas/readManualRequest'
       parameters:
         - {$ref: '#/components/parameters/ContentTypeHeader'}
         - {$ref: '#/components/parameters/Authorization'}
@@ -645,7 +645,44 @@ paths:
           description: Success
           content:
             application/json:
-              schema: {$ref: '#/components/schemas/readCardSuccess'}
+              schema: {$ref: '#/components/schemas/readManualSuccess'}
+        400:
+          description: Not Found
+          content:
+            application/json:
+              schema: {$ref: '#/components/schemas/NotFoundError'}
+        404:
+          description: Bad Request
+          content:  
+            application/json:
+              schema: {$ref: '#/components/schemas/BadRequestError'}
+  /api/v3/authCard:
+    post:
+      tags:
+        - authCard
+      x-group-name: CardPointe Integrated Terminal API
+      x-proxy-name: authCard
+      summary: A call to the authCard endpoint initiates an MSR (magnetic stripe), EMV (chip), or NFC (contactless) payment card interaction and initiates an authorization request to the CardPointe Gateway.
+      description: |
+        A call to the authCard endpoint initiates an MSR (magnetic stripe), EMV (chip), or NFC (contactless) payment card interaction and initiates an authorization request to the CardPointe Gateway.
+
+        See Using the <a href="">Terminal API Tokenization and Payment Endpoints</a> for more information.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema: 
+              $ref: '#/components/schemas/authCardRequest'
+      parameters:
+        - {$ref: '#/components/parameters/ContentTypeHeader'}
+        - {$ref: '#/components/parameters/Authorization'}
+        - {$ref: '#/components/parameters/X-CardConnect-SessionKey'}
+      responses:
+        200: 
+          description: Success
+          content:
+            application/json:
+              schema: {$ref: '#/components/schemas/readManualSuccess'}
         400:
           description: Not Found
           content:
@@ -803,13 +840,13 @@ components:
       in: header
       description: A message to send in the ping request and receive in the response. The value can be blank, however the message field must be included in the request.
   schemas:
-    readManualRequest:
+    authCardRequest:
       x-model-version: 1.0
       description: readSignature Request
       properties:
         merchantID:
           description: |
-            Required Field
+            **Required Field**
             
             Your Merchant ID, required for all requests.
           type: string
@@ -817,7 +854,266 @@ components:
           example: 1234
         hsn: 
           description: |
-            Required Field
+            **Required Field**
+            
+            The hardware service number for the terminal.
+          type: string
+          maxLength: 18
+          example: 14012PP20131409
+        amount:
+          description: | 
+            **Required Field**
+          
+            The dollar amount to be authorized, with two implied decimal places (for example, to specify "$10.00," enter "1000"). 
+          type: integer
+          example: 100
+        aid:
+          description: |
+            Sets the default EMV application ID, which processes the request as either a PIN debit or a credit transaction.
+
+            See <a href="">Accepting PIN Debit Cards</a> for detailed information on PIN Debit requirements and application workflows.
+
+            **Note**: PIN debit is only supported for qualified merchants boarded on the First Data North and Rapid Connect processing platforms. 
+
+            Supported values are:
+
+            * <code>debit</code> - Set to <code>debit</code> for EMV cards with a debit AID to request a PIN.
+            * <code>credit</code> - Set to <code>credit</code> for all other cards. This is the default if no AID is specified.
+          type: string
+          example: credit
+          maxLength: 8
+        authCode:
+          description: An authorization code returned by the issuer, when voice authorization is required to complete a transaction.
+          type: string
+          example: 100
+        authMerchantId: 
+          description: |
+            This value is only used if you have multiple merchant IDs, and want to process the transaction using a different merchant ID that is not associated with this terminal. The <code>authMerchantId</code> and <code>merchantId</code> must belong to the same customer account.
+
+            This setting must be enabled for your merchant account.
+
+            Contact <a href="mailto:integrationdelivery@fiserv.com>integrationdelivery@fiserv.com</a> for additional information.
+          type: string
+          maxLength: 16
+        bin: 
+          description: | 
+            Determines if the binInfo object is included in the authorization response. The binInfo data includes additional information about the payment card used in the authorization. See the CardPointe Gateway API's BIN endpoint description for more information.
+
+            Defaults to false if not provided.
+          type: boolean
+          example: 'false'
+        beep:
+          description: |
+            Determines if the terminal beeps to:
+
+            * Prompt the user to swipe/dip the card.
+            * Prompt the user to remove the card (EMV transactions).
+            * Register key presses during PIN entry for debit transactions.
+
+            If true, beep is enabled.
+
+            Defaults to false if not provided.
+          type: boolean
+          example: 'true'
+        capture: 
+          description: |
+            Determines whether or not to capture the amount for settlement within the authorization request.
+
+            If set to <code>false</code>, the retref or authcode must be captured in a separate request in order for the merchant to receive funding for the transaction.
+
+            Defaults to <code>true</code> if not provided.
+          type: boolean
+          example: 'true'
+        clearDisplayDelay:
+          description: | 
+            Determines the number of milliseconds to wait, after the request completes, before clearing the authorization status from the terminal display and returning to the idle display.
+
+            Set to 0 to disable clearing the display after an authCard request.
+          type: integer
+          example: 500
+        confirmAmount:
+          description: |
+            Determines if the terminal prompts to confirm the the transaction amount prior to prompting to insert/swipe/tap the card.
+
+            Defaults to true if not provided.
+          type: boolean
+          example: 'true'
+        createProfile:
+          description: |
+            Determines whether or not to create a stored profile using the payment data in the request. 
+
+            If <code>true</code>, initiates a profile create request to the CardPointe Gateway API profile endpoint. 
+
+            If <code>false</code>, no profile is created. Defaults to false if not provided.
+
+            See the CardPointe Gateway API <a href="">profile endpoint description</a> for detailed information.
+          type: boolean
+        gzipsignature:
+          description: | 
+            Determines if the captured signature is compressed using Gzip.
+
+            If true, the signature data returned is a JSON-escaped, Base64-encoded, Gzipped, bitmap (BMP) file.
+
+            If false, the signature data returned is an uncompressed BMP in base64-encoded. 
+
+            Defaults to true if not provided.
+          type: boolean
+          example: 'false'
+        includeAmountDisplay:
+          description: |
+            Determines if the transaction amount is displayed to the user during an MSR or EMV (card-present) transaction.
+
+            Defaults to true if not provided.
+            
+            **Note**: This parameter is not supported for Clover terminals. The Clover terminal displays the amount to the user regardless of this parameter.
+          type: boolean
+          example: 'true'
+        includeAVS:
+          description: |
+            Determines if the user is prompted to enter the billing zip code for the card.
+
+            If true, prompts the user to enter the zip code.
+
+            Defaults to false if not provided.
+          type: boolean
+        includePIN:
+          description: |
+            Determines if the user is prompted to enter a PIN after card swipe for MSR (magnetic-stripe) debit cards that support PIN.
+
+            See <a href="">Accepting PIN Debit Cards</a> for detailed information on PIN Debit requirements and application workflows.
+
+            Note: PIN debit is only supported for qualified merchants boarded on the First Data North and Rapid Connect processing platforms. Contact Support for more information.
+
+            Set this value to <code>true</code> for MSR debit cards, to process the transaction as debit.
+
+            Defaults to <code>false</code> if not provided.
+          type: boolean
+          example: 'false'
+        includeSignature:
+          description: |
+            Determines if the terminal prompts for a signature for devices that support signature capture.
+
+            Defaults to true if not provided.
+
+            The format of the signature data returned depends on the following parameters.
+          type: boolean
+          example: 'false'
+        InvoiceId:
+          description: A unique invoice ID, used for ClientLine reporting. This value is an alphanumeric string with a maximum of 12 characters.
+          type: string
+          maxLength: 12
+          example: 123456789012
+        orderID:
+          description: |
+            A unique order ID used to identify the transaction. This value is an alphanumeric string with a maximum of 50 characters. If no order ID is specified in the request, the terminal automatically generates a unique order ID in the format <HSN-timestamp> and amends it to the transaction record.
+
+            You can use the order ID to get information on a transaction using the CardPointe Gateway API inquireByOrderid endpoint.
+
+            Additionally, when an authorization attempt times out and the terminal service does not receive a response from the CardPointe Gateway, the terminal service uses the order ID to make an <a href="">inquireByOrderid</a> request to check the status of the transaction. If the transaction status cannot be determined, the terminal service makes three <a href="">voidByOrderId</a> requests to void the transaction. See <a href="">Handling Timeouts</a> in the <a href="">CardPointe Integrated Terminal Developer Guides</a> for more information.
+
+            **Note**: If you include an order ID it must meet the following requirements: 
+
+            * The order ID must be a unique value. Using duplicate order IDs can lead to the wrong transaction being voided in the event of a timeout.
+            
+            * The order ID must not include any portion of a payment account number (PAN), and no portion of the order ID should be mistaken for a PAN. If the order ID passes the Luhn check performed by the CardPointe Gateway, the value will be masked in the database, and attempts to use the order ID in an inquire, void, or refund request will fail.
+          maxLength: 50
+          type: string
+          example: 1233200399
+        printDelay:
+          description: |
+            For Clover terminals, specifies the amount of time (in milliseconds) to wait before printing generating and printing a second receipt, when "printExtraReceipt":"true". On average, this process takes approximately 5 seconds (5000 ms), therefore the total amount of time to print a second receipt is equal to the printDelay value + 5000ms.
+
+            Valid values range from 0 to 60000 (ms).
+
+            **Notes**:
+
+            * <code>printDelay</code> is required when <code>"printExtraReceipt":"true"</code>; otherwise, the response returns the following error:
+
+            <code>{"errorCode":1,"errorMessage":"printDelay is a required parameter when printExtraReceipt=true"}</code>
+
+            * If <code>printDelay</code> is set to a value outside of the allowed range, the response returns the following error:
+
+            <code>{"errorCode":3,"errorMessage":"'printDelay' value must be between 0 and 60,000"}</code>
+          type: integer
+          maxLength: 60000
+        printExtraReceipt:
+          description: |
+            For Clover terminals, if <code>true</code>, the terminal prints a second copy of the receipt once the authorization is complete and the initial receipt is printed. 
+
+            **Notes**:
+
+            * Only applicable if <code>printReceipt</code> is <code>true</code>.
+            
+            * If <code>true</code>, the <code>printDelay</code> parameter is also **required**.
+            
+            Defaults to <code>false</code> if not provided.
+          type: boolean
+          example: 'false'
+        printReceipt:
+          description: |
+            For Clover terminals, specifies whether or not the terminal prints a receipt.
+
+            Defaults to <code>false</code> if not provided.
+          type: boolean
+        signatureDimensions:
+          description: | 
+            Specifies the custom width and height of the signature image, in the format 'x,y'. The maximum value is 999,999.
+          type: integer
+          maxLength: 999999
+          example: 320, 450
+        signatureFormat:
+          type: string
+          description: |
+            Specifies the signature file format. One of the following values:
+
+            * BMP (this is the default if the value is omitted)
+            
+            * JPG
+            
+            * PNG
+          example: png
+        signatureImageType:
+          description: |
+            Specifies if the image has a 1-bit color depth (binary) or 24-bit color depth (RGB).
+
+            This property defaults to binary (1-bit) for BMP and PNG files. JPG files will always be rgb (24-bit).
+
+            Possible values are:
+
+            * binary - 1-bit; the default for BMP and PNG files.
+            * rgb - 24-bit; the default for JPG files, and optional for PNG files.
+        termId:
+          description: |
+            The Terminal Device ID, if required for ClientLine reporting. 
+
+            If specified, termId must be exactly 8 characters.
+          maxLength: 8
+          type: string
+        userFields:
+          type: object
+          description: |
+            Enables optional userFields to include additional data in the authorization request for future retrieval.
+
+            The value of the userFields object is a series of name-value pairs that are meaningful to the merchant. 
+
+            The userFields object is limited to 4000 bytes total.
+          example: {"UDF1" : "12345678", 
+                    "UDF2" : "Good info here"}
+    readManualRequest:
+      x-model-version: 1.0
+      description: readSignature Request
+      properties:
+        merchantID:
+          description: |
+            **Required Field**
+            
+            Your Merchant ID, required for all requests.
+          type: string
+          maxLength: 16
+          example: 1234
+        hsn: 
+          description: |
+           **Required Field**
             
             The hardware service number for the terminal.
           type: string
